--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <section class="home" id="home">
                         <div class="home_container section bd-grid">
                             <div class="home_data bd-grid">
-                                <!-- <img src="assets/img/perfil.png" alt="" class="home_img"> -->
+                                <img src="assets/img/perfil.png" alt="" class="home_img">
                                 
                                 <h1 class="home_title">SMITH <b>MATTHEW</b></h1>
                                 <h3 class="home_profession">Web developer</h3>
